# Yuzu

./: LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/app/: __init__.py  arxiv_client.py  bibtex.py  config.py  main.py  models.py  openai_client.py
frontend/: Dockerfile  Dockerfile.prod  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/test/: page.tsx
frontend/components/: ChatWindow.tsx  FavoritesList.tsx  LoadingState.tsx  PaperCard.tsx  ResearchInput.tsx  SwipeInterface.tsx  Toast.tsx
frontend/lib/: api.ts  confetti.ts  types.ts
frontend/public/: manifest.json
